versions/3.4.0/docs/Parameters.md
# Parameters

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**analytics** | **bool** |  | [optional] 
**branding_css** | **str** |  | [optional] 
**branding_logo** | **str** |  | [optional] 
**external_url** | **str** | http://host/ | [optional] 
**file_manager_recycle_bin** | **bool** | Recycle bins are usually either in Workspace/Share or Volume folder | [optional] 
**https_redirect** | **str** |  | [optional] 
**language** | **str** |  | [optional] 
**ltfs_default_restore_to_original_location** | **bool** |  | [optional] 
**ltfs_default_search_directories** | **bool** |  | [optional] 
**ltfs_library_address** | **str** |  | [optional] 
**mail_styling** | **dict(str, str)** |  | [optional] 
**media_auto_play** | **bool** |  | [optional] 
**media_auto_proxy** | **bool** |  | [optional] 
**media_auto_scan** | **bool** |  | [optional] 
**media_auto_transport** | **bool** |  | [optional] 
**media_auto_veritone_upload** | **bool** |  | [optional] 
**media_default_custom_field_type** | **str** |  | [optional] 
**media_default_delete_behaviour** | **str** |  | [optional] 
**media_force_show_deleted** | **bool** |  | [optional] 
**media_keep_selection_when_browsing** | **bool** |  | [optional] 
**media_recycle_bin** | **bool** | Recycle bin is usually in the .recycle-bin folder in the volume root | [optional] 
**ntp_offer_sync** | **bool** |  | [optional] 
**otp_policy** | **str** |  | [optional] 
**tasks_run_scheduled** | **bool** |  | [optional] 
**users_default_permissions** | **str** | Copy this value from an existing user | [optional] 
**workspaces_folder_template_path** | **str** |  | [optional] 
**workspaces_path** | **str** |  | [optional] 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


